web-page created

--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello world!
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Introduzione al Cloud</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<h1>Introduzione al Cloud</h1>
+		<h3>IFTS Smart-Fab, Pagina ufficiale del corso</h3>
+	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<h5>Docente: <a href="http://pages.di.unipi.it/soldani" target="_blank">Jacopo Soldani</a></h5>
+	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<h5>Lezione 1 - Cloud computing</h5>
+		<p>Data: 10/11/2017, Ore: 3 </p>
+	</div>
+	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+</body>
