--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<p>Data: 10/11/2017, Ore: 3 </p>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<h4>Lezioni 2 - Servizi: dalla teoria alla pratica</h4>
+		<h4>Lezione 2 - Servizi: dalla teoria alla pratica</h4>
 		<p>Data: TBA, Ore: TBA</p>
 		<p>
 			Link utili:  
