exercise solutions hidden

--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@
 <head>
     <title>Introduzione al Cloud</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<style>
-	.disabled{
-		pointer-events: none;
-	}
-	</style>
 </head>
 <body>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -30,16 +25,18 @@
 			<a href="http://www.dropwizard.io/" target="_blank">Dropwizard</a>,
 			<a href="http://www.swensensoftware.com/im-only-resting" target="_blank">I'm only resting</a>
 		</p>
+		<!--
 		<p>
 			Soluzioni degli esercizi:
-			<a class="disabled" href="https://github.com/smart-fab-cloud/punteggi" target="_blank">Punteggi</a>,
-			<a class="disabled" href="https://github.com/smart-fab-cloud/inventario" target="_blank">Inventario</a>,
-			<a class="disabled" href="https://github.com/smart-fab-cloud/rubrica" target="_blank">Rubrica</a>,
-			<a class="disabled" href="https://github.com/smart-fab-cloud/lovecalculator" target="_blank">LoveCalculator</a>,
-			<a class="disabled" href="https://github.com/smart-fab-cloud/calcolatrice" target="_blank">Calcolatrice</a>,
-			<a class="disabled" href="https://github.com/smart-fab-cloud/biblioteca" target="_blank">Biblioteca</a>,
-			<a class="disabled" href="https://github.com/smart-fab-cloud/registro" target="_blank">Registro</a>
+			<a href="https://github.com/smart-fab-cloud/punteggi" target="_blank">Punteggi</a>,
+			<a href="https://github.com/smart-fab-cloud/inventario" target="_blank">Inventario</a>,
+			<a href="https://github.com/smart-fab-cloud/rubrica" target="_blank">Rubrica</a>,
+			<a href="https://github.com/smart-fab-cloud/lovecalculator" target="_blank">LoveCalculator</a>,
+			<a href="https://github.com/smart-fab-cloud/calcolatrice" target="_blank">Calcolatrice</a>,
+			<a href="https://github.com/smart-fab-cloud/biblioteca" target="_blank">Biblioteca</a>,
+			<a href="https://github.com/smart-fab-cloud/registro" target="_blank">Registro</a>
 		</p>
+		-->
 	</div>
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 </body>
