added link to punteggi-test

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 		<!--
 		<p>
 			Soluzioni degli esercizi:
-			<a href="https://github.com/smart-fab-cloud/punteggi-client" target="_blank">punteggi-client</a>,
+			<a href="https://github.com/smart-fab-cloud/punteggi-client" target="_blank">Esempio di client per Punteggi</a>,
+			<a href="https://github.com/smart-fab-cloud/punteggi-test" target="_blank">Unit tester per Punteggi</a>,
 			<a href="TBD" target="_blank">Inventario</a>,
 			<a href="TBD" target="_blank">Rubrica</a>,
 			<a href="TBD" target="_blank">LoveCalculator</a>,
