added hidden links to exercises (class 4)

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 			Soluzioni degli esercizi:
 			<a href="https://github.com/smart-fab-cloud/punteggi-client" target="_blank">Esempio di client per Punteggi</a>,
 			<a href="https://github.com/smart-fab-cloud/punteggi-test" target="_blank">Unit tester per Punteggi</a>,
-			<a href="TBD" target="_blank">Inventario</a>,
-			<a href="TBD" target="_blank">Rubrica</a>,
-			<a href="TBD" target="_blank">LoveCalculator</a>,
-			<a href="TBD" target="_blank">Calcolatrice</a>,
-			<a href="TBD" target="_blank">Biblioteca</a>,
-			<a href="TBD" target="_blank">Registro</a>
+			<a href="https://github.com/smart-fab-cloud/inventario-test" target="_blank">Unit tester per Inventario</a>,
+			<a href="https://github.com/smart-fab-cloud/rubrica-test" target="_blank">Rubrica</a>,
+			<a href="https://github.com/smart-fab-cloud/lovecalculator-test" target="_blank">Unit tester per LoveCalculator</a>,
+			<a href="https://github.com/smart-fab-cloud/calcolatrice-test" target="_blank">Unit tester per Calcolatrice</a>,
+			<a href="https://github.com/smart-fab-cloud/biblioteca-test" target="_blank">Unit tester per Biblioteca</a>,
+			<a href="https://github.com/smart-fab-cloud/registro-test" target="_blank">Unit tester per Registro</a>
 		</p>
 		-->
 	</div>
