--- a/index.html
+++ b/index.html
@@ -75,5 +75,11 @@
 		</p>
 	</div>
 	-->
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="background-color:#333333;color:white">
+		<center>
+			<h5 style="font-size:10pt">Based on Bootstrap themes available on <a href="http://bootswatch.com" target="_blank">Bootswatch</a>.</h5>
+			<h5 style="font-size:10pt">Customised by <a href="http://pages.di.unipi.it/soldani" target="_blank">Jacopo Soldani</a>, 2018.</h5>
+		</center>
+	</div>
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 </body>
