--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 			<a href="https://raw.githubusercontent.com/smart-fab-cloud/configs/master/dropwizard-build.txt" target="_blank">dropwizard-build.txt</a>,
 			<a href="http://www.swensensoftware.com/im-only-resting" target="_blank">I'm only resting</a>,
 			<a href="http://restclient.net/" target="_blank">RESTClient</a>.
+			<br>
+			Soluzioni degli esercizi:
+			<a href="https://github.com/smart-fab-cloud/punteggi" target="_blank">Punteggi</a>,
+			<a href="https://github.com/smart-fab-cloud/inventario" target="_blank">Inventario</a>
 		</p>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 jumbotron">
