added class (exercises)

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 		<h4>5 - Utilizzare servizi esistenti</h4>
 		<p style="font-size:12pt">
 			Data: 02/03/2018, Ore: 5
+			Data: 09/03/2018, Ore: 5
 			<br><br>
 			Link utili:  
 			<a href="https://raw.githubusercontent.com/smart-fab-cloud/configs/master/client-dependencies.txt" target="_blank">client-dependencies.txt</a>,
