--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 		<h4>5 - Utilizzare servizi esistenti</h4>
 		<p style="font-size:12pt">
 			Data: 02/03/2018, Ore: 5
+			<br>
 			Data: 09/03/2018, Ore: 5
 			<br><br>
 			Link utili:  
@@ -88,7 +89,7 @@
 			<a href="https://github.com/smart-fab-cloud/punteggi-client" target="_blank">Esempio di client per Punteggi</a>,
 			<a href="https://github.com/smart-fab-cloud/punteggi-test" target="_blank">Unit tester per Punteggi</a>,
 			<a href="https://github.com/smart-fab-cloud/inventario-test" target="_blank">Unit tester per Inventario</a>,
-			<a href="https://github.com/smart-fab-cloud/rubrica-test" target="_blank">Rubrica</a>,
+			<a href="https://github.com/smart-fab-cloud/rubrica-test" target="_blank">Unit tester per Rubrica</a>,
 			<a href="https://github.com/smart-fab-cloud/lovecalculator-test" target="_blank">Unit tester per LoveCalculator</a>,
 			<a href="https://github.com/smart-fab-cloud/calcolatrice-test" target="_blank">Unit tester per Calcolatrice</a>,
 			<a href="https://github.com/smart-fab-cloud/biblioteca-test" target="_blank">Unit tester per Biblioteca</a>,
