--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
 			<a href="https://github.com/smart-fab-cloud/registro-test" target="_blank">Unit tester per Registro</a>
 		</p>
 	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 jumbotron">
+		<h4>6 - Orchestrare servizi esistenti</h4>
+		<p style="font-size:12pt">
+			Data: TBA, Ore: 5
+			<!--
+			<br>
+			Soluzioni degli esercizi:
+			<a href="https://github.com/smart-fab-cloud/IP2Geo/archive/master.zip" target="_blank">IP2Geo</a>
+			-->
+		</p>
+	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="background-color:#333333;color:white">
 		<center>
 			<h5 style="font-size:10pt">Based on Bootstrap themes available on <a href="http://bootswatch.com" target="_blank">Bootswatch</a>.</h5>
