--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 jumbotron">
 		<h4>6 - Orchestrare servizi esistenti</h4>
 		<p style="font-size:12pt">
-			Data: TBA, Ore: 5
+			Data: 30/03/2018, Ore: 5
 			<!--
 			<br>
 			Soluzioni degli esercizi:
