minor fix exercises links

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 			<br>
 			Soluzioni degli esercizi:
 			<a href="https://github.com/smart-fab-cloud/punteggi/archive/engineered.zip" target="_blank">Punteggi (e Utenti)</a>,
-			<a href="https://github.com/smart-fab-cloud/inventario/archive/engineered" target="_blank">Inventario</a>,
-			<a href="https://github.com/smart-fab-cloud/rubrica/archive/engineered" target="_blank">Rubrica</a>,
-			<a href="https://github.com/smart-fab-cloud/lovecalculator/archive/engineered" target="_blank">LoveCalculator</a>,
-			<a href="https://github.com/smart-fab-cloud/calcolatrice/archive/engineered" target="_blank">Calcolatrice</a>,
-			<a href="https://github.com/smart-fab-cloud/biblioteca/archive/engineered" target="_blank">Biblioteca</a>,
-			<a href="https://github.com/smart-fab-cloud/registro/archive/engineered" target="_blank">Registro</a>
+			<a href="https://github.com/smart-fab-cloud/inventario/archive/engineered.zip" target="_blank">Inventario</a>,
+			<a href="https://github.com/smart-fab-cloud/rubrica/archive/engineered.zip" target="_blank">Rubrica</a>,
+			<a href="https://github.com/smart-fab-cloud/lovecalculator/archive/engineered.zip" target="_blank">LoveCalculator</a>,
+			<a href="https://github.com/smart-fab-cloud/calcolatrice/archive/engineered.zip" target="_blank">Calcolatrice</a>,
+			<a href="https://github.com/smart-fab-cloud/biblioteca/archive/engineered.zip" target="_blank">Biblioteca</a>,
+			<a href="https://github.com/smart-fab-cloud/registro/archive/engineered.zip" target="_blank">Registro</a>
 		</p>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 jumbotron">
@@ -86,14 +86,14 @@
 			<a href="https://raw.githubusercontent.com/smart-fab-cloud/configs/master/junit-dependencies.txt" target="_blank">junit-dependencies.txt</a>
 			<br>
 			Soluzioni degli esercizi:
-			<a href="https://github.com/smart-fab-cloud/punteggi-client" target="_blank">Esempio di client per Punteggi</a>,
-			<a href="https://github.com/smart-fab-cloud/punteggi-test" target="_blank">Unit tester per Punteggi</a>,
-			<a href="https://github.com/smart-fab-cloud/inventario-test" target="_blank">Unit tester per Inventario</a>,
-			<a href="https://github.com/smart-fab-cloud/rubrica-test" target="_blank">Unit tester per Rubrica</a>,
-			<a href="https://github.com/smart-fab-cloud/lovecalculator-test" target="_blank">Unit tester per LoveCalculator</a>,
-			<a href="https://github.com/smart-fab-cloud/calcolatrice-test" target="_blank">Unit tester per Calcolatrice</a>,
-			<a href="https://github.com/smart-fab-cloud/biblioteca-test" target="_blank">Unit tester per Biblioteca</a>,
-			<a href="https://github.com/smart-fab-cloud/registro-test" target="_blank">Unit tester per Registro</a>
+			<a href="https://github.com/smart-fab-cloud/punteggi-client/archive/master.zip" target="_blank">Esempio di client per Punteggi</a>,
+			<a href="https://github.com/smart-fab-cloud/punteggi-test/archive/master.zip" target="_blank">Unit tester per Punteggi</a>,
+			<a href="https://github.com/smart-fab-cloud/inventario-test/archive/master.zip" target="_blank">Unit tester per Inventario</a>,
+			<a href="https://github.com/smart-fab-cloud/rubrica-test/archive/master.zip" target="_blank">Unit tester per Rubrica</a>,
+			<a href="https://github.com/smart-fab-cloud/lovecalculator-test/archive/master.zip" target="_blank">Unit tester per LoveCalculator</a>,
+			<a href="https://github.com/smart-fab-cloud/calcolatrice-test/archive/master.zip" target="_blank">Unit tester per Calcolatrice</a>,
+			<a href="https://github.com/smart-fab-cloud/biblioteca-test/archive/master.zip" target="_blank">Unit tester per Biblioteca</a>,
+			<a href="https://github.com/smart-fab-cloud/registro-test/archive/master.zip" target="_blank">Unit tester per Registro</a>
 		</p>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 jumbotron">
