--- a/index.html
+++ b/index.html
@@ -100,11 +100,21 @@
 		<h4>6 - Orchestrare servizi esistenti</h4>
 		<p style="font-size:12pt">
 			Data: 30/03/2018, Ore: 5
-			<!--
 			<br>
 			Soluzioni degli esercizi:
 			<a href="https://github.com/smart-fab-cloud/IP2Geo/archive/master.zip" target="_blank">IP2Geo</a>
-			-->
+		</p>
+	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 jumbotron">
+		<h4>7 - Docker</h4>
+		<p style="font-size:12pt">
+			Data: 06/04/2018, Ore: 5
+		</p>
+	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 jumbotron">
+		<h4>8 - Prova d'esame</h4>
+		<p style="font-size:12pt">
+			Data: 20/04/2018, Ore: 5
 		</p>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="background-color:#333333;color:white">
