--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			Data: 30/03/2018, Ore: 5
 			<br>
 			Link utili:  
-			<a href="https://raw.githubusercontent.com/smart-fab-cloud/configs/master/ip2geo-dependencies.txt" target="_blank">ip2geo-dependencies.txt</a>,
+			<a href="https://raw.githubusercontent.com/smart-fab-cloud/configs/master/ip2geo-dependencies.txt" target="_blank">ip2geo-dependencies.txt</a>
 			<br>
 			Soluzioni degli esercizi:
 			<a href="https://github.com/smart-fab-cloud/IP2Geo/archive/master.zip" target="_blank">IP2Geo</a>
